usando a tag br

--- a/exercícios/002/index.html
+++ b/exercícios/002/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tag br!</title>
+</head>
+<body>  
+    <h1>Aprendendo a usar br!</h1>
+    <hr>
+    <p>Quando se está escrevendo um tesxto, e dentro da tag &lt;p&gt; você quer dar uma quebra de parágrafo, basta usar a tag &lt;br&gt;, que seu texto terá uma qubra de parágrafo!</p>
+</body>
+</html>
