Inserindo símbolos e emojis

--- a/exercícios/003/index.html
+++ b/exercícios/003/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inserindo símbolos e emojis! </title>
+</head>
+<body>
+    <h1>Símbolos e emojis</h1>
+    <hr>
+    <p>Confira alguns símbolos: <br>- &reg; <br>- &copy; <br>- &trade; <br>- &euro; <br>- &pound; <br>- &yen; <br>- &cent;</p>
+    <p>Agora alguns emojis! <br>- &#x1F596; <br>- &#x1F913; <br>- &#x1F47D; </p>
+</body>
+</html>
